<resources>
    <string name="app_name">AllReceips2</string>
    <string name="title_home">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_notifi">Notifications</string>
    <string name="title_mylist">Mi lista</string>
    <string name="title_nombre_receta">Nombre de la receta</string>
    <string name="title_tiempo">time</string>
    <string name="title_descripcion">Preparacion de la receta</string>
    <string name="title_buscar">Buscar ingredientes</string>
    <string name="title_preparacion">Describir preparacion</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_email">Email</string>
    <string name="tittle_pasword">Password</string>
    <!--Botones-->
    <string name="button_login">Iniciar</string>
    <string name="button_register">Registrarse</string>
    <string name="button_invited">Invitado</string>
    <string name="button_create">Crear</string>

</resources>