<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateReceip"

    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/encabezadoCreacion"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#5A5A5A"
                android:gravity="bottom"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nombre_receta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/title_nombre_receta"
                    android:background="@drawable/rounded_border"
                    android:padding="10dp"
                    android:backgroundTint="@color/white"
                    />

                <NumberPicker
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/button_social"
                    android:backgroundTint="@color/white"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="120dp"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:src="@mipmap/ic_add_image"
                    android:background="@drawable/button_rounded"
                    android:backgroundTint="#5A5A5A"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/title_buscar"
                    android:textColor="#000000" />


                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/rounded_border"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/title_descripcion"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/descripcion_receta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/title_descripcion"
                    android:background="@drawable/rounded_border"
                    android:paddingBottom="50dp"
                    android:gravity="top"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:text="@string/button_create"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="end"
                    />

            </LinearLayout>
    </ScrollView>


</FrameLayout>